package com.renato.repository;

import com.renato.model.Conquista;

public class ConquistaRepository extends GenericRepository<Conquista> {

    public ConquistaRepository() {
        super(Conquista.class);
    }
}
