@startuml Diagrama de Serviços - Fact or Fake

title Camada de Serviços (Lógica de Negócio)

' ==========================
' CONFIGURAÇÕES DE ESTILO
' ==========================
skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
skinparam linetype ortho

skinparam class {
    BackgroundColor<<Service>> #FFF9C4
    BorderColor<<Service>> #F57F17
    BackgroundColor<<Repository>> #F3E5F5
    BorderColor<<Repository>> #6A1B9A
}

' ==========================
' SERVIÇOS
' ==========================

class JogoOrquestradorService <<Service>> {
    - noticiaSelecaoService: NoticiaSelecaoService
    - respostaProcessorService: RespostaProcessorService
    - progressoCategoriaService: ProgressoCategoriaService
    - conquistaVerificadorService: ConquistaVerificadorService
    - usuarioService: UsuarioService
    --
    + processarResposta(Long usuarioId, Long noticiaId, boolean): ResultadoJogadaDTO
    + obterNoticiaAleatoriaDaCategoria(Long usuarioId, Long categoriaId): Noticia
    - montarResultadoCompleto(...): ResultadoJogadaDTO
}

class NoticiaSelecaoService <<Service>> {
    - noticiaRepository: NoticiaRepository
    - respostaRepository: RespostaRepository
    --
    + obterNoticiaAleatoria(Long usuarioId, Long categoriaId): Noticia
    + buscarPorId(Long id): Noticia
}

class RespostaProcessorService <<Service>> {
    - respostaRepository: RespostaRepository
    - usuarioRepository: UsuarioRepository
    --
    + processarResposta(Long usuarioId, Noticia, boolean): ResultadoRespostaDTO
    - salvarResposta(...): void
}

class ConquistaVerificadorService <<Service>> {
    - conquistaRepository: ConquistaRepository
    - conquistaUsuarioRepository: ConquistaUsuarioRepository
    - usuarioRepository: UsuarioRepository
    --
    + verificarConquistas(Long usuarioId): List<Conquista>
    + listarConquistas(): List<Conquista>
    + obtemConquistasUsuario(Long usuarioId): List<ConquistaUsuario>
    - verificarCriterio(Conquista, int): boolean
    - desbloquearConquista(Long usuarioId, Conquista): void
}

class ProgressoCategoriaService <<Service>> {
    - progressoRepository: ProgressoCategoriaRepository
    - categoriaRepository: CategoriaRepository
    - respostaRepository: RespostaRepository
    --
    + atualizarProgresso(Long usuarioId, Long categoriaId): ProgressoCategoriaDTO
    + obterProgresso(Long usuarioId, Long categoriaId): ProgressoCategoria
    + calcularEstatisticas(Long usuarioId, Long categoriaId): EstatisticasCategoriaDTO
}

class RecompensaService <<Service>> {
    - progressoRepository: ProgressoCategoriaRepository
    - categoriaRepository: CategoriaRepository
    - respostaRepository: RespostaRepository
    --
    + obterTodasRecompensasUsuario(Long usuarioId): List<RecompensaCategoriaDTO>
    + calcularProgressoImagem(Long usuarioId, Long categoriaId): ProgressoImagemDTO
}

class UsuarioService <<Service>> {
    - usuarioRepository: UsuarioRepository
    --
    + listarUsuarios(): List<Usuario>
    + encontrarUsuario(Long id): Usuario
    + encontrarUsuarioPorEmail(String email): Usuario
    + salvarUsuario(Usuario): Usuario
    + atualizarUsuario(Usuario): void
}

class CategoriaService <<Service>> {
    - categoriaRepository: CategoriaRepository
    --
    + listarCategorias(): List<Categoria>
    + encontrarCategoria(Long id): Categoria
    + salvarCategoria(Categoria): Categoria
    + atualizarCategoria(Categoria): void
}

class NoticiaService <<Service>> {
    - noticiaRepository: NoticiaRepository
    --
    + listarNoticias(): List<Noticia>
    + encontrarNoticia(Long id): Noticia
    + salvarNoticia(Noticia): Noticia
    + atualizarNoticia(Noticia): void
}

class RespostaService <<Service>> {
    - respostaRepository: RespostaRepository
    --
    + obtemRespostasUsuario(Long usuarioId): List<Resposta>
}

' ==========================
' REPOSITÓRIOS USADOS
' ==========================

class NoticiaRepository <<Repository>> {
    + findByCategoriaId(): List
    + findById(): Noticia
}

class RespostaRepository <<Repository>> {
    + findByUsuarioId(): List
    + findByUsuarioAndNoticia(): Resposta
    + countAcertosUnicosPorCategoria(): long
}

class UsuarioRepository <<Repository>> {
    + findById(): Usuario
    + findByEmail(): Usuario
    + save(): Usuario
    + update(): Usuario
}

class CategoriaRepository <<Repository>> {
    + findById(): Categoria
    + findAll(): List
}

class ProgressoCategoriaRepository <<Repository>> {
    + findByUsuarioIdAndCategoriaId(): ProgressoCategoria
    + findByUsuarioId(): List
}

class ConquistaRepository <<Repository>> {
    + findAll(): List
    + findById(): Conquista
}

class ConquistaUsuarioRepository <<Repository>> {
    + findByUsuario(): List
    + save(): ConquistaUsuario
}

' ==========================
' DEPENDÊNCIAS
' ==========================

JogoOrquestradorService ..> NoticiaSelecaoService : coordena
JogoOrquestradorService ..> RespostaProcessorService : coordena
JogoOrquestradorService ..> ProgressoCategoriaService : coordena
JogoOrquestradorService ..> ConquistaVerificadorService : coordena
JogoOrquestradorService ..> UsuarioService : coordena

NoticiaSelecaoService ..> NoticiaRepository : usa
NoticiaSelecaoService ..> RespostaRepository : usa

RespostaProcessorService ..> RespostaRepository : usa
RespostaProcessorService ..> UsuarioRepository : usa

ConquistaVerificadorService ..> ConquistaRepository : usa
ConquistaVerificadorService ..> ConquistaUsuarioRepository : usa
ConquistaVerificadorService ..> UsuarioRepository : usa

ProgressoCategoriaService ..> ProgressoCategoriaRepository : usa
ProgressoCategoriaService ..> CategoriaRepository : usa
ProgressoCategoriaService ..> RespostaRepository : usa

RecompensaService ..> ProgressoCategoriaRepository : usa
RecompensaService ..> CategoriaRepository : usa
RecompensaService ..> RespostaRepository : usa

UsuarioService ..> UsuarioRepository : usa
CategoriaService ..> CategoriaRepository : usa
NoticiaService ..> NoticiaRepository : usa
RespostaService ..> RespostaRepository : usa

' ==========================
' NOTAS EXPLICATIVAS
' ==========================

note right of JogoOrquestradorService
    <b>Orquestrador Principal do Jogo</b>

    <b>Padrão: Service Orchestration</b>

    Coordena múltiplos services especializados:
    1. NoticiaSelecaoService - seleciona notícia
    2. RespostaProcessorService - processa resposta
    3. ProgressoCategoriaService - atualiza progresso
    4. ConquistaVerificadorService - verifica conquistas
    5. UsuarioService - gerencia usuário

    <b>Responsabilidade Única:</b>
    Orquestrar o fluxo completo de uma jogada,
    delegando tarefas específicas para services
    especializados.

    <b>Retorna:</b> ResultadoJogadaDTO completo
end note

note left of RespostaProcessorService
    <b>Processador de Respostas</b>

    <b>Responsabilidades:</b>
    ✓ Verificar se resposta está correta
    ✓ Calcular pontuação (+10 por acerto)
    ✓ Registrar tentativa do usuário
    ✓ Atualizar nível global (via Usuario.adicionarPontos)
    ✓ Atualizar título (via Usuario.atualizarTitulo)
    ✓ Salvar/atualizar resposta no banco

    <b>Sistema de Níveis (na entidade Usuario):</b>
    - XP necessário = 100 × nível atual
    - Nível máximo: 30+

    <b>Títulos por Nível:</b>
    1-4: Reporter | 5-9: Analista
    10-14: Investigador | 15-19: Investigador Sênior
    20-24: Detetive | 25-29: Detetive Master
    30+: Caçador Supremo
end note

note bottom of RecompensaService
    <b>Sistema de Recompensas Visuais</b>

    <b>Responsabilidades:</b>
    ✓ Calcular progresso visual em cada categoria
    ✓ Retornar dados de peças desbloqueadas
    ✓ Fornecer informações para o frontend

    <b>Desbloqueio de Peças (via ProgressoCategoria):</b>
    - 25% de progresso → Peça 1
    - 50% de progresso → Peça 2
    - 75% de progresso → Peça 3
    - 100% de progresso → Peça 4

    <b>Cálculo de Progresso:</b>
    progresso = (acertos_únicos / total_notícias) × 100
end note

note top of ConquistaVerificadorService
    <b>Verificador de Conquistas</b>

    Verifica e desbloqueia conquistas
    baseadas em critérios:
    - PONTOS_TOTAIS
    - Outros critérios futuros

    Retorna lista de conquistas
    recém-desbloqueadas
end note

@enduml

